[package]
name = "chearmyp_token"
version = "0.6.2"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.1.3"

[dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v0.3.1"

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.1.3"
features = ["range_boundary", "vec_boundary_collection"]

[dev-dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v0.3.1"
features = ["vecdeque_token_queue", "assertable_token_kind"]

[features]
default = []
no_std = ["abstract_chearmyp_boundary/no_std", "abstract_chearmyp_token/no_std"]
assertable_token = ["abstract_chearmyp_token/assertable_token_kind"]
