[package]
name = "chearmyp_token"
version = "0.6.0-dev"
authors = ["Kenneth Trecy Tobias <33564322+KennethTrecy@users.noreply.github.com>"]
edition = "2018"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.2.0"

[dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v0.4.1"

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.2.0"
features = ["range_boundary", "vec_boundary_collection"]

[dev-dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v0.4.1"
features = ["vecdeque_token_queue", "assertable_token_kind"]
