[package]
name = "chearmyp_token"
version = "1.0.0"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v1.0.0"

[dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v1.0.0"

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v1.0.0"
features = ["range_boundary", "vec_boundary_collection"]

[dev-dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v1.0.0"
features = ["vecdeque_token_queue", "assertable_token_kind"]

[features]
default = []
no_std = ["abstract_chearmyp_boundary/no_std", "abstract_chearmyp_token/no_std"]
assertable_token = ["abstract_chearmyp_token/assertable_token_kind"]
